@@ -28,6 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl.php">ASL</license>
  <notes>
+* [jan] Use locale based sorting.
 * [jan] Fix remembering the expansion state of the notepads panel (Bug #10797).
 * [jan] Update Japanese translation (Hiromi Kimura &lt;hiromi@tac.tsukuba.ac.jp&gt;).
  </notes>
@@ -899,6 +900,7 @@
    <date>2011-11-30</date>
    <license uri="http://www.horde.org/licenses/asl.php">ASL</license>
    <notes>
+* [jan] Use locale based sorting.
 * [jan] Fix remembering the expansion state of the notepads panel (Bug #10797).
 * [jan] Update Japanese translation (Hiromi Kimura &lt;hiromi@tac.tsukuba.ac.jp&gt;).
    </notes>
